# open-whisper-app

./: .gitignore  README.md
open-super-whisper/: .gitignore  DOUBLE_SOUND_FIX.md  LICENSE  MODEL_CHANGE_LOG.md  PERFORMANCE_IMPROVEMENT.md  README.ja.md  README.md  WHISPER_MODEL_PERFORMANCE.md  debug_hotkeys_import.md  debug_window_levels.py  main.py  pyproject.toml  test_accessibility.py  test_basic_window.py  test_cgwindow_approach.py  test_fullscreen_window.py
open-super-whisper/assets/: Info.plist
open-super-whisper/docs/: custom-vocabulary-system-instructions-checklist.md  custom-vocabulary-system-instructions-fix.md
open-super-whisper/src/: __init__.py
open-super-whisper/src/core/: __init__.py  audio_recorder.py  hotkeys.py  whisper_api.py
open-super-whisper/src/gui/: __init__.py  main.py
open-super-whisper/src/gui/components/: __init__.py
open-super-whisper/src/gui/components/dialogs/: __init__.py  hotkey_dialog.py  system_instructions_dialog.py  vocabulary_dialog.py
open-super-whisper/src/gui/components/widgets/: __init__.py  floating_indicator.py  menubar_indicator.py  status_indicator.py
open-super-whisper/src/gui/resources/: __init__.py  config.py  labels.py  styles.py
open-super-whisper/src/gui/utils/: __init__.py  mic_permission.py  resource_helper.py
open-super-whisper/src/gui/windows/: __init__.py  main_window.py
